<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pfandev.android.stradarcontroller.MainActivity"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/left_layout"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lateral_tilt"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/front_car_image_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/ic_directions_car_black_24dp"
            android:padding="10dp"
            android:contentDescription="@string/frontal_tilt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:gravity="center"/>
        <Button
            android:id="@+id/scan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed_limit"
            android:gravity="center"/>
        <Button
            android:id="@+id/speed_limited_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/left_layout"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/direction_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/direction"
            android:gravity="center"/>
        <TextView
            android:id="@+id/speed_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/speed"
            android:gravity="center"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/middle_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@id/top_layout"
        android:layout_toLeftOf="@+id/right_layout"
        android:layout_toRightOf="@id/left_layout">
        <TextView
            android:id="@+id/devices_list_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/devices_list"
            android:textSize="15sp"
            android:visibility="invisible"/>
        <ListView
            android:id="@+id/devices_list_view"
            android:layout_below="@id/devices_list_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"/>
        <com.pfandev.android.stradarcontroller.DrawingFrameView
            android:id="@+id/drawing_frame_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/navigation_image_view"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/ic_navigation_black_24dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:visibility="invisible"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/left"/>
        <SeekBar
            android:id="@+id/left_right_seek_bar"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:max="20"
            android:progress="10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/right"/>
        <ImageButton
            android:id="@+id/bluetooth_image_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_bluetooth_disabled_black_24dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/bluetooth"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/brake"/>
        <SeekBar
            android:id="@+id/throttle_brake_seek_bar"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:max="20"
            android:progress="10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/throttle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/right_layout"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/top_layout"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frontal_tilt"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/side_car_image_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/ic_airport_shuttle_black_24dp"
            android:padding="10dp"
            android:contentDescription="@string/lateral_tilt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/control_mode"
            android:gravity="center"/>
        <Button
            android:id="@+id/control_mode_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bars"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_status"
            android:gravity="center"/>
        <Button
            android:id="@+id/car_active_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/off"/>
    </LinearLayout>

</RelativeLayout>
